--- a/css/layout.css
+++ b/css/layout.css
@@ -12,35 +12,35 @@ div{
 #a {
   width: 480px;
   height: 75px;
-  background-color: red;
+  background-color: rgb(255, 0, 0);
 }
 
 #b {
   width: 480px;
   height: 150px;
-  background-color: orange;
+  background-color: rgb(255, 0, 106);
 }
 
 #c {
   width: 480px;
   height: 125px;
-  background-color: yellow;
+  background-color: rgb(255, 0, 212);
 }
 
 #d {
   width: 480px;
   height: 125px;
-  background-color: green;
+  background-color: rgb(152, 4, 238);
 }
  #f, #h {
   width: 240px;
   height: 250px;
 }
 #f {
-  background-color: blue
+  background-color: rgb(76, 0, 255)
 }
 #h{
-  background-color: purple
+  background-color: rgb(0, 37, 248)
 }
 #e, #g {
   width: 240px;
@@ -52,10 +52,10 @@ div{
   background-color: black
 }
 #g {
-  background-color: lightpink;
+  background-color: rgb(255, 125, 145);
 }
 #i {
-  background-color: tan;
+  background-color: rgb(151, 72, 147);
   width: 480px;
   height: 80px;
 }
@@ -69,13 +69,13 @@ div{
   #a {
     width: 960px;
     height: 100px;
-    background-color: lightpink;
+    background-color: rgb(51, 25, 48);
   }
   #b {
     width: 200px;
     height: 600px;
     float: left;
-    background-color: lightcoral;
+    background-color: rgb(14, 6, 13);
   }
   #c, #d {
     width: 380px;
@@ -83,36 +83,36 @@ div{
     float: left;
   }
 #c {
-  background-color: lightseagreen;
+  background-color: rgb(153, 119, 247);
 }
 #d {
-  background-color: orchid
+  background-color: rgb(81, 62, 134)
 }
   #e {
     width: 190px;
     height: 250px;
     float: left;
     clear: none;
-    background-color: darkgray;
+    background-color: rgb(40, 33, 68);
     color: black
   }
   #f {
     width: 190px;
     height: 250px;
     float: left;
-    background-color: lightslategray
+    background-color: rgb(115, 182, 250)
   }
   #g {
     width: 190px;
     height: 250px;
     float: left;
-    background-color: lightcyan;
+    background-color: rgb(41, 90, 90);
   }
   #h {
     width: 190px;
     height: 250px;
     float: left;
-    background-color: darkgoldenrod
+    background-color: rgb(0, 255, 55)
   }
   #i {
     width: 760px;
